<resources>
    <string name="app_name">MyPayment</string>
    <string name="signUP">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="password">Password</string>
    <string name="name">Username</string>
    <string name="title1">Saving</string>
    <string name="cash">Amount</string>
    <string name="saving">Save</string>
    <string name="cancelation">Cancel</string>
    <string name="title">LOGIN</string>
    <string name="title2">CREATE ACCOUNT</string>
    <string name="email">Email_Id</string>
    <string name="listView">Client Details</string>
    <string name="country">Country name</string>
    <string name="login">LOG IN</string>

</resources>