<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavingActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="104dp"
            android:text="@string/title1"
            android:textColor="@color/teal_700"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/name" />

        <EditText
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/country" />

        <EditText
            android:id="@+id/cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/countryName"
            android:layout_alignEnd="@+id/countryName"
            android:layout_alignRight="@+id/countryName"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="number"
            android:text="@string/cash" />

        <Button
            android:id="@+id/saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cash"
            android:layout_alignStart="@+id/cash"
            android:layout_alignLeft="@+id/cash"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/saving" />

        <Button
            android:id="@+id/notsaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/saving"
            android:layout_alignLeft="@+id/saving"
            android:layout_marginLeft="150dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/cancelation" />
    </RelativeLayout>



</RelativeLayout>