<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="104dp"
            android:text="@string/title"
            android:textColor="@color/teal_700"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/username1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/username1"
            android:layout_alignRight="@+id/username1"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/notAuthenticate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_marginTop="52dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/cancelation" />

        <Button
            android:id="@+id/authenticate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_marginTop="52dp"
            android:layout_marginLeft="150dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/signIn" />
    </RelativeLayout>



</RelativeLayout>



