<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/title2"
        android:textStyle="bold"
        android:id="@+id/tSignUP"
        android:textColor="@color/teal_700"/>

    <EditText
        android:id="@+id/usingEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tSignUP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Email" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Username"
        android:layout_below="@+id/usingEmail"
        android:layout_alignLeft="@+id/usingEmail"
        android:layout_alignStart="@+id/usingEmail"
        android:layout_marginTop="23dp"  />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Confirm your password" />


    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_alignStart="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/signIn" />
    <Button
        android:id="@+id/registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/confirmPassword"
        android:layout_alignRight="@+id/confirmPassword"
        android:layout_alignTop="@+id/register"
        android:backgroundTint="@color/teal_200"
        android:text="@string/signUP" />

</RelativeLayout>